fixed movable camera, modified light falloff, added axis-aligned rectangles, modified light surface colouration in raycasting function

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
 
 canvas {
   display: flex;
-  width: 100%;
+  width: auto;
+  max-height: 60vh;
   max-width: 92vw;
 }
